--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ header{
 
 #logo{
   width: 40%;
+  padding-left: 50px;
   font-family: 'Open Sans';
   font-weight: 800;
   font-size: 40px;
@@ -89,11 +90,15 @@ nav{
 
 header nav{
   text-align: right;
+  width: 60%;
+  padding-right: 50px;
 }
 
 header nav a{
+  margin-right: 30px;
   color: #f9e42e;
   width: 60%;
+  text-decoration: none;
 }
 
 h1{
@@ -108,6 +113,8 @@ h2{
 }
 
 h3{
+  padding-top: 15px;
+  padding-bottom: 15px;
   font-family: 'Open Sans';
   font-weight: 800;
   font-size: 32px;
@@ -128,10 +135,15 @@ main {
 }
 
 article p::first-letter{
-  font-size: 200%;
+  vertical-align: top;
+  font-size: 250%;
+  float: left;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  color: #606161;
 }
 
-article p{
+article p {
   padding-bottom: 30px;
   font-family: 'Open Sans';
   font-weight: 300;
@@ -144,6 +156,7 @@ article p{
   font-family: 'Open Sans';
   font-weight: 600;
   font-size: 24px;
+  text-decoration: none;
 }
 
 #sidebar{
@@ -159,14 +172,23 @@ li{
 
 nav a{
   font-family: 'Open Sans';
-  font-weight: 800;
+  font-weight: 600;
   font-size: 22px;
+  text-decoration: none;
 }
 
 nav p{
   font-family: 'Open Sans';
   font-weight: 300;
   font-size: 22px;
+}
+
+#learn_more{
+  text-decoration: none;
+}
+
+#ad img{
+  width: 180px;
 }
 
 footer {
