--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,8 @@ body {
 /* LAYOUT
 /*******************************************/
 
-/* Center the container */
 #container{
-  width: 960px;
+  width: 1060px;
   margin: auto;
 }
 
@@ -127,11 +126,16 @@ main {
 }
 
 #main_container{
-  width:700px;
+  width:70%;
   margin-left: 50px;
   margin-right: 10px;
   padding-top: 40px;
   padding-bottom: 50px;
+}
+
+#main_container img{
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 article p::first-letter{
@@ -151,7 +155,7 @@ article p {
 }
 
 .read_more {
-  display: block;/*** see_if_can_remove ***/
+  display: block;
   text-align: right;
   font-family: 'Open Sans';
   font-weight: 600;
@@ -160,7 +164,8 @@ article p {
 }
 
 #sidebar{
-  width: 240px;
+  width: 30%;
+  padding-left: 20px;
   padding-top: 40px;
 }
 
@@ -178,6 +183,7 @@ nav a{
 }
 
 nav p{
+  padding-right: 35px;
   font-family: 'Open Sans';
   font-weight: 300;
   font-size: 22px;
@@ -189,7 +195,7 @@ nav p{
 
 #ad img{
   padding-top: 40px;
-  width: 180px;
+  width: 240px;
 }
 
 footer {
