--- a/css/style.css
+++ b/css/style.css
@@ -203,19 +203,20 @@ footer {
   color: white;
   background-color: #121212;
   text-align: center;
-  height: 240px;
+  height: 275px;
 }
 
 #signup{
   background-color: #f9e42e;
-  height: 50px;
+  height: 70px;
   padding-top: 12px;
   padding-bottom: 10px;
 }
 
 #signup p{
   display: inline-block;
-  padding: 5px 30px 5px 30px;
+  margin-top: 5px;
+  padding: 10px 45px 10px 45px;
   font-family: 'Open Sans';
   font-weight: 800;
   font-size: 12px;
